Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-133558

DRM video fails to play on macOS

XMLWordPrintable

    • macOS
    • b13fd8202 (dev), 50b7e625d (6.9), fc9e81c80 (6.8)

      Follow this link and open the "Protected MPEG-DASH" option

      On an ARM MacBook, our code still tries to pick up the x64 Widevine plugin:

      [8887:259:0207/102245.408834:ERROR:cdm_module.cc(115)] Error: dlopen(/Applications/Google Chrome.app/Contents/Frameworks/Google Chrome Framework.framework/Versions/Current/Libraries/WidevineCdm/_platform_specific/mac_x64/libwidevinecdm.dylib, 0x0001): tried: '/Applications/Google Chrome.app/Contents/Frameworks/Google Chrome Framework.framework/Versions/Current/Libraries/WidevineCdm/_platform_specific/mac_x64/libwidevinecdm.dylib' (mach-o file, but is an incompatible architecture (have 'x86_64', need 'arm64e' or 'arm64')), '/System/Volumes/Preboot/Cryptexes/OS/Applications/Google Chrome.app/Contents/Frameworks/Google Chrome Framework.framework/Versions/Current/Libraries/WidevineCdm/_platform_specific/mac_x64/libwidevinecdm.dylib' (no such file), '/Applications/Google Chrome.app/Contents/Frameworks/Google Chrome Framework.framework/Versions/Current/Libraries/WidevineCdm/_platform_specific/mac_x64/libwidevinecdm.dylib' (mach-o file, but is an incompatible architecture (have 'x86_64', need 'arm64e' or 'arm64')), '/Applications/Google Chrome.app/Contents/Frameworks/Google Chrome Framework.framework/Versions/132.0.6834.162/Libraries/WidevineCdm/_platform_specific/mac_x64/libwidevinecdm.dylib' (mach-o file, but is an incompatible architecture (have 'x86_64', need 'arm64e' or 'arm64')), '/System/Volumes/Preboot/Cryptexes/OS/Applications/Google Chrome.app/Contents/Frameworks/Google Chrome Framework.framework/Versions/132.0.6834.162/Libraries/WidevineCdm/_platform_specific/mac_x64/libwidevinecdm.dylib' (no such file), '/Applications/Google Chrome.app/Contents/Frameworks/Google Chrome Framework.framework/Versions/132.0.6834.162/Libraries/WidevineCdm/_platform_specific/mac_x64/libwidevinecdm.dylib' (mach-o file, but is an incompatible architecture (have 'x86_64', need 'arm64e' or 'arm64'))

       

       

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            qt_webengine_team Qt WebEngine Team
            kchehlarski Kaloyan Chehlarski
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes