Fix Widevine path detection on ARM macOS

The path to the Widevine CDM plugin on macOS was hardcoded to where it's
located on x64 machines, which led to DRM content not working on
ARM-based machines.

Fixes: QTBUG-133558
Pick-to: 6.8
Change-Id: I723033dfd7d011b1d8635fb88549c7fd58331856
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
(cherry picked from commit b13fd82027b73bc4addab727f9fa818d65c1dde0)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>